<resources>
    <string name="app_name">Cafe</string>
    <string name="welcome">Welcome!</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_button">sign in</string>
    <string name="logoOfCafe">logoOfCafe</string>
    <string name="greetings">Hello, %s! What do you want?</string>
    <string name="tea">Tea</string>
    <string name="coffee">Coffee</string>
    <string name="what_u_want_to_add_to_your_s">What u want to add to your %s</string>
    <string name="sugar">Sugar</string>
    <string name="milk">Milk</string>
    <string name="lemon">Lemon</string>
    <string name="choose_the_drink_type">Choose the drink type</string>
    <string name="make_order">Make order</string>
    <string name="name">Name:</string>
    <string name="drink">Drink:</string>
    <string name="drinkType">DrinkType:</string>
    <string name="additives">Additives:</string>
    <string name="please_fill_all_fields">Please, fill all fields!</string>

    <array name="typeOfTea">
        <item>Green</item>
        <item>Black</item>
    </array>

    <array name="typeOfCoffee">
        <item>Americano</item>
        <item>Espresso</item>
        <item>Latte</item>
    </array>
</resources>